--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -2,6 +2,7 @@
 background{
   background-color: 	#BEBEBE;
 }
+
 .fullscreenDiv {
     background-color: #e8e8e8;
     width: 100%;
@@ -20,8 +21,12 @@ background{
   .list-group{
     max-height: 400px;
     margin-bottom: 10px;
-    overflow-y:auto;
     -webkit-overflow-scrolling: touch;
+
+}
+
+.list-group-item{
+  background-color: #000000;
 }
 .bounce-in-top{animation:bounce-in-top 1.1s both}
 @keyframes bounce-in-top{0%{transform:translateY(-500px);animation-timing-function:ease-in;opacity:0}38%{transform:translateY(0);animation-timing-function:ease-out;opacity:1}55%{transform:translateY(-65px);animation-timing-function:ease-in}72%{transform:translateY(0);animation-timing-function:ease-out}81%{transform:translateY(-28px);animation-timing-function:ease-in}90%{transform:translateY(0);animation-timing-function:ease-out}95%{transform:translateY(-8px);animation-timing-function:ease-in}100%{transform:translateY(0);animation-timing-function:ease-out}}
